# auto-stand

./: Cargo.toml  README  README.md  config.toml  hcrso4_calibration.toml  justfile
.github/workflows/: general.yaml
src/: config.rs  main.rs  motor.rs  movement.rs  primitives.rs  sensor.rs  table.rs
