[package]
name = "standup"
version = "0.1.0"
edition = "2021"
authors = ["Alex Jesipow"]

[dependencies]
anyhow = { version = "1.0", features = [] }
clap = { version = "4.4", features = ["derive"] }
lazycell = "1.3"
once_cell = "1.19.0"
rppal = "0.16"
log = "0.4.20"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"